# paperless-ngx-mcp-server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  inspector_entry.py  pyproject.toml
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-26-code-review-corrections.md  2026-05-03-fastmcp-followup-r1-hardening.md  2026-05-03-fastmcp-followup-r2-typed-responses.md  2026-05-12-mcp-advanced-features.md
src/paperless_mcp/: __init__.py  _envutil.py  _origin_check.py  app.py  client.py  config.py  healthcheck.py  server.py
src/paperless_mcp/resources/: documents.py
src/paperless_mcp/tools/: __init__.py  _filters.py  _helpers.py  _safe_path.py  _schemas.py  auth.py  documents.py  highlevel.py  search.py  stats.py  tasks.py  taxonomy.py
tests/: conftest.py  test_auth.py  test_client.py  test_documents.py  test_envutil.py  test_filters.py  test_healthcheck.py  test_helpers.py  test_highlevel.py  test_interactive_search.py  test_origin_check.py  test_resources.py  test_safe_path.py  test_search.py  test_server.py  test_tasks.py  test_taxonomy.py
