[project]
name = "paperless-mcp"
version = "0.2.0"
description = "MCP server for Paperless-ngx REST API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
paperless-mcp = "paperless_mcp.server:main"
paperless-mcp-healthcheck = "paperless_mcp.healthcheck:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paperless_mcp"]


[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/paperless_mcp/__init__.py:__version__"]
build_command = "pip install uv && uv build"
commit_message = "chore(release): v{version}\n\nAutomated release [skip ci]"
tag_format = "v{version}"
major_on_zero = false
allow_zero_version = true
upload_to_vcs_release = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.branches.main]
match = "(main|master)"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0"
]

